Traits UI Changelog
===================

What's new in TraitsUI 4.5.0
----------------------------

Fixes

 * Application-modal Traits UI dialogs are correctly styled as
   application-modal under Qt. On Macs, they will now appear as independent
   windows rather than drop-down sheets. (#164)
 * Qt CodeEditor now honors 'show_line_numbers' and the 'readonly' style (#137)
 * Deprecated `implements` declaration removed, use `provides` instead (#152)
 * Fix TableEditor so that Qt.QSplitter honors 'orientation' trait (#171)
 * Show row labels in Qt TableEditor when requested (#176)
 * Fix TupleEditor so that multiple change events are not fired (#179)


Release 4.4.0
-------------

The biggest change in this release is support for the new adaptation mechanism
in Traits 4.4.0.  Other than that, there are a number of other minor changes,
improvements and bugfixes.

Corran Webster (corranwebster on GitHub) is now maintainer of TraitsUI.

Change summary since 4.3.0

New Features

 * Changes for new Traits adaptation mechanism support (#113)

Enhancements

 * Add Travis-CI support.
   
 * Remove the use of the deprecated PySimpleApp under Wx and several other
   improvements. (#107)

 * Improvements to Qt TabularEditor, TableEditor and TreeEditor drag and drop
   support.  Should be roughly on par with Wx support.  No API changes.
   (#124, #126, #129, #135)

 * Improvements to PyMimeData coercion to better handle lists of items. (#127)

Fixes

 * Fixes item selection issue #133 in ListStrEditor under Wx 2.9 (#137)

 * Fixes to avoid asking for value of a Delegated Event (#123 and #136)

 * Fix drag image location for Qt TreeEditor (#132)

 * Qt TreeEditor supports bg and fg colors and column labels correctly. (#131)

 * Fix ListEditor under PySide (#125)

 * remove event handlers before window destruction in Wx.  Required for
   Wx 2.9. (#108)

There are currently some other unlisted changes going back some time
before this file was created.